--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Teste do Git</h1>
+    <h1>Teste do Git e do GitHub</h1>
     <script src="js/index.js"></script>
 </body>
 </html>
